Starting a unit test project and writing inital test methods for the calcualtion methods

--- a/Calculator.UI/Pages/Index.cshtml
+++ b/Calculator.UI/Pages/Index.cshtml
@@ -18,9 +18,9 @@
         </div>
         <div class="mt-2 form-control">
             <label class="form-label" for="first-number-input">First number:</label>
-            <input id="first-number-input" type="number" asp-for="FirstNumber" />
+            <input id="first-number-input" type="number" asp-for="firstnumber" />
             <label class="form-label" for="second-number-input">Second number:</label>
-            <input id="second-number-input" type="number" asp-for="SecondNumber" />
+            <input id="second-number-input" type="number" asp-for="secondnumber" />
         </div>
         <div class="mt-2">
             <label class="form-label" for="Output-Resault">Resault:</label>
