--- a/Calculator.UI/Pages/Index.cshtml
+++ b/Calculator.UI/Pages/Index.cshtml
@@ -4,11 +4,16 @@
     ViewData["Title"] = "Home page";
 }
 
+
+<div class="text-center">
+    <hi class="display-2">Welcome to Lucias Web Calculator</hi>
+</div>
+
 <form method="post">
     <div class="form-control">
         <div class="input-group-lg">
             <label class="form-label" for="calculation-method">Calculation method:</label>
-            <select class="form-select" asp-for="CalcMethod">
+            <select class="form-select" asp-for="@Model.CalcMethod">
                 <option>--- Select method ---</option>
                 <option value="add">Add</option>
                 <option value="subtract">Subtract</option>
@@ -22,10 +27,21 @@
             <label class="form-label" for="second-number-input">Second number:</label>
             <input id="second-number-input" type="number" asp-for="secondnumber" />
         </div>
-        <div class="mt-2">
-            <label class="form-label" for="Output-Resault">Resault:</label>
-            <input type="number" disabled asp-for="@Model.result"/>
+        <div class="mt-2">          
             <button class="btn btn-outline-dark" type="submit">Calculate!</button>
         </div>
     </div>
 </form>
+
+@if (Model.calResult != null)
+{
+    @if (Model.calResult.Successful == true)
+    {
+        <h1>Result: @Model.calResult.Result.ToString()</h1>
+    }
+    else
+    {
+        <h1> @Model.calResult.Error!.Message</h1>
+    }
+
+}
